# am

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DESIGN.md  MAP.md  Makefile  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
crates/am-agent/: Cargo.toml
crates/am-agent/src/: main.rs
crates/am-cli/: Cargo.toml
crates/am-cli/src/: main.rs
crates/am-cli/src/commands/: config.rs  identity.rs  listen.rs  mod.rs  profile.rs  relay.rs  send.rs  skill.rs
crates/am-cli/tests/: identity.rs  messaging.rs  relay.rs
crates/am-core/: Cargo.toml
crates/am-core/src/: client.rs  config.rs  error.rs  identity.rs  lib.rs  message.rs  output.rs  profile.rs  relay.rs
crates/am-ingest/: Cargo.toml
crates/am-ingest/src/: main.rs
plugin/.claude-plugin/: plugin.json
plugin/skills/am/: SKILL.md
plugin/skills/am/references/: output-schemas.md
scripts/: e2e.sh
skills/agent-messenger/: SKILL.md
skills/agent-messenger/examples/: harness.sh
skills/agent-messenger/references/: workflows.md
skills/am/: SKILL.md
skills/am/examples/: messaging.sh
skills/am/references/: agent-harness.md  output-schemas.md
