[workspace]
resolver = "2"
members = ["crates/am-core", "crates/am-cli", "crates/am-ingest", "crates/am-agent"]

[workspace.package]
version = "0.3.3"
edition = "2024"
license = "GPL-3.0-or-later"
rust-version = "1.85"
repository = "https://github.com/Sortis-AI/agent-messenger"
homepage = "https://github.com/Sortis-AI/agent-messenger"

[workspace.dependencies]
am-core = { path = "crates/am-core", version = "0.3.3" }
nostr-sdk = { version = "0.44", features = ["nip49", "nip59"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
thiserror = "2"
dirs = "6"
tracing = "0.1"
futures = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.38", features = ["bundled"] }
sha2 = "0.10"
