[package]
name = "agent-messenger"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI messenger for agent-to-agent encrypted communication over Nostr"

[[bin]]
name = "am"
path = "src/main.rs"

[dependencies]
am-core = { workspace = true }
nostr-sdk = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
