[package]
name = "am-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core library for agent-to-agent encrypted messaging over Nostr"
repository.workspace = true
homepage.workspace = true

[dependencies]
futures = { workspace = true }
nostr-sdk = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
